--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.18.6",
     "@pinia/nuxt": "^0.5.4",
-    "aos": "^2.3.4",
-    "loader": "^2.1.1",
-    "maska": "^3.0.2",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca",
   "devDependencies": {
-    "sass": "^1.78.0"
+    "sass": "^1.79.4",
+    "sass-loader": "^16.0.2",
+    "tailwindcss": "^3.4.13"
   }
 }
